syntax = "proto3";
package freon;
option go_package = "pb;freonApi";

message Localization {
  int64 id = 1;
  string locale = 2;
  string lang_name = 3;
}

message GetListLocalizationsReq {
}

message GetListLocalizationsRes {
  repeated Localization localizations = 1;
}

